--- a/src/main/webapp/app/mySchedule.html
+++ b/src/main/webapp/app/mySchedule.html
@@ -29,6 +29,7 @@
    <script type="text/javascript">
         document.writeln('<link rel="stylesheet" type="text/css" href="../app/css/style.css?r='+Math.random()+'"/>');
         document.writeln("<s" + "cript type='text/javascript' src='../js/common.js?r=" + Math.random() + "'></scr" + "ipt>");
+        document.writeln("<s" + "cript type='text/javascript' src='../app/js/globalObj.js?r=" + Math.random() + "'></scr" + "ipt>");
         document.writeln("<s" + "cript type='text/javascript' src='../app/js/mySchedule.js?r=" + Math.random() + "'></scr" + "ipt>");
         document.writeln("<s" + "cript type='text/javascript' src='../app/js/urlObj.js?r=" + Math.random() + "'></scr" + "ipt>");
     </script>
