--- a/src/main/webapp/app/boardroom.html
+++ b/src/main/webapp/app/boardroom.html
@@ -6,6 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no, email=no" />
+    <meta  http-equiv="x-rim-auto-match" content="none">
     <script type="text/javascript" src='../js/jquery.1.11.3.min.js'></script>
     <script type="text/javascript">
         //根据屏幕大小改变根元素字体大小
@@ -29,6 +30,7 @@
     <script type="text/javascript">
         document.writeln('<link rel="stylesheet" type="text/css" href="../app/css/style.css?r='+Math.random()+'"/>');
         document.writeln("<s" + "cript type='text/javascript' src='../js/common.js?r=" + Math.random() + "'></scr" + "ipt>");
+        document.writeln("<s" + "cript type='text/javascript' src='../app/js/globalObj.js?r=" + Math.random() + "'></scr" + "ipt>");
         document.writeln("<s" + "cript type='text/javascript' src='../app/js/boardroom.js?r=" + Math.random() + "'></scr" + "ipt>");
         document.writeln("<s" + "cript type='text/javascript' src='../app/js/urlObj.js?r=" + Math.random() + "'></scr" + "ipt>");
     </script>
@@ -41,15 +43,9 @@
     <!-- 表格 -->
     <div class="table_box"></div>
     <!-- 弹层不可预定 -->
-    <div class="layer layer_booked">
-       
-    </div>
+    <div class='layer layer_booked'></div>
     <!-- 弹层预定 -->
     <div class="layer layer_toBook">
-        <p class='info fl'>7层-会议室4  &nbsp;&nbsp;（12座）
-            <br><br>
-        投影仪、触摸电视、八爪鱼</p>
-        <div class="button">预定</div>
     </div>
 </body>
 </html>
