--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="行圆汽车,汽车网站,汽车,汽车频道">
     <title>会议室系统</title>
 	<script type="text/javascript" src='js/jquery.1.11.3.min.js'></script>
+	<script src="js/layer/layer.js"></script>
 	<!-- <script type="text/javascript" src="http://api.oa.xingyuanauto.com/Check.ashx?NotCheckModule=true"></script> -->
     <script type="text/javascript">
         document.writeln('<l' + 'ink rel="stylesheet" type="text/css" href="css/reset.css?r='+Math.random()+'"/>');
