--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="汽车,行圆汽车 ,汽车网,汽车报价,汽车图片,评测,汽车导购,汽车降价">
     <meta name="description" content="行圆汽车,汽车网站,汽车,汽车频道">
     <title>会议室系统</title>
-    <link rel="shortcut icon" href="Images/www.ico.la_c62186fe5373af6f5604ca9c8bc39ba4_32X32.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/Images/www.ico.la_c62186fe5373af6f5604ca9c8bc39ba4_32X32.ico" type="image/x-icon">
 	<script type="text/javascript" src='js/jquery.1.11.3.min.js'></script>
 	<script src="js/layer/layer.js"></script>
 	<!-- <script type="text/javascript" src="http://api.oa.xingyuanauto.com/Check.ashx?NotCheckModule=true"></script> -->
