--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/www.ico.la_c62186fe5373af6f5604ca9c8bc39ba4_32X32.ico" >
 	<script type="text/javascript" src='js/jquery.1.11.3.min.js'></script>
 	<script src="js/layer/layer.js"></script>
-	<script type="text/javascript" src="http://api.oa.xingyuanauto.com/Check.ashx?NotCheckModule=true"></script>
+	<!-- <script type="text/javascript" src="http://api.oa.xingyuanauto.com/Check.ashx?NotCheckModule=true"></script> -->
     <script type="text/javascript">
         document.writeln('<l' + 'ink rel="stylesheet" type="text/css" href="css/reset.css?r='+Math.random()+'"/>');
         document.writeln('<l' + 'ink rel="stylesheet" type="text/css" href=css/style.css?r='+Math.random()+'"/>');
@@ -54,7 +54,7 @@
 	                <div class="top_info">
 	                    <ul>
 	                        <li id="user_info"></li>
-	                        <li><a href="http://oa.xingyuanauto.com"><span class="color01">返回OA系统</span></a></li>
+	                        <li><a id="return_oa"><span class="color01">返回OA系统</span></a></li>
 	                        <div class="clear"></div>
 	                    </ul>
 	                </div>
