--- a/src/main/webapp/app/mySchedule.html
+++ b/src/main/webapp/app/mySchedule.html
@@ -35,7 +35,7 @@
     </script>
 </head>
 <body style='background: #f0f0f0;'>
-    <div class="head"><h2></h2></div>
+<!--     <div class="head"><h2></h2></div> -->
     <div class="list" style='padding-right: 0.3rem;'></div>
 <!--     弹层 -->
 <!--     //style="display:none;" -->
