预定列表点击闪烁、我的会议弹窗样式

--- a/src/main/webapp/app/mySchedule.html
+++ b/src/main/webapp/app/mySchedule.html
@@ -42,8 +42,7 @@
     <div class='model' style="display:none;">
         <div class="layer">
             <div class="close"></div>
-            <div class="con">
-            </div>
+            <div class="con"></div>
         </div>
     </div>
 </body>
