--- a/src/main/webapp/app/mySchedule.html
+++ b/src/main/webapp/app/mySchedule.html
@@ -7,6 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no, email=no" />
     <script type="text/javascript" src='../js/jquery.1.11.3.min.js'></script>
+    <script type="text/javascript" src='../app/js/layer.js'></script>
     <script type="text/javascript">
         //根据屏幕大小改变根元素字体大小
         (function(doc, win) {
@@ -35,10 +36,8 @@
     </script>
 </head>
 <body style='background: #f0f0f0;'>
-<!--     <div class="head"><h2></h2></div> -->
     <div class="list" style='padding-right: 0.3rem;'></div>
 <!--     弹层 -->
-<!--     //style="display:none;" -->
     <div class='model' style="display:none;">
         <div class="layer">
             <div class="close"></div>
