修改预定样式

--- a/src/main/webapp/app/boardroom.html
+++ b/src/main/webapp/app/boardroom.html
@@ -35,7 +35,7 @@
         document.writeln("<s" + "cript type='text/javascript' src='../app/js/urlObj.js?r=" + Math.random() + "'></scr" + "ipt>");
     </script>
 </head>
-<body>
+<body style="background: #f5f5f5;">
     <!-- 时间轴 -->
     <div class="time_box">
         <img src="../app/images/time.png" alt="">
