添加预定页面必填项 去除列表滚动条

--- a/src/main/webapp/app/boardroom.html
+++ b/src/main/webapp/app/boardroom.html
@@ -38,7 +38,7 @@
 <body style="background: #f5f5f5;">
     <!-- 时间轴 -->
     <div class="time_box">
-        <img src="../app/images/time.png" alt="">
+        <img src="../app/images/time2.png" alt="">
     </div>
     <!-- 表格 -->
     <div class="table_box"></div>
