--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,9 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>没有访问权限</title>
 </head>
-<body>
-	success
-</body>
+<script type="text/javascript">alert("11");</script>
 </html>
