--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="images/www.ico.la_c62186fe5373af6f5604ca9c8bc39ba4_32X32.ico" >
 	<script type="text/javascript" src='js/jquery.1.11.3.min.js'></script>
 	<script src="js/layer/layer.js"></script>
+	<script src="js/properties.js"></script>
 	<!-- <script type="text/javascript" src="http://api.oa.xingyuanauto.com/Check.ashx?NotCheckModule=true"></script> -->
     <script type="text/javascript">
         document.writeln('<l' + 'ink rel="stylesheet" type="text/css" href="css/reset.css?r='+Math.random()+'"/>');
@@ -22,19 +23,19 @@
 	        <div class="logo"><a href="#"></a></div>
 	        <div>
 	            <ul id="menu" class="menu">
-	                <li id="SYS023MOD0001" style="display: none;" onclick="skipPages('SYS023MOD0001')">
+	                <li id="MOD0001" style="display: none;" onclick="skipPages('MOD0001')">
 	                    <a href="javascript:void(0)">
 	                        <div class="distance1"></div>
 	                        <div>会议室管理</div>
 	                    </a>
 	                </li>
-	                <li id="SYS023MOD0002" style="display: none;" onclick="skipPages('SYS023MOD0002')">
+	                <li id="MOD0002" style="display: none;" onclick="skipPages('MOD0002')">
 	                    <a href="javascript:void(0)">
 	                        <div class="distance2"></div>
 	                        <div>预定浏览</div>
 	                    </a>
 	                </li>
-	                <li id="SYS023MOD0003" style="display: none;" onclick="skipPages('SYS023MOD0003')">
+	                <li id="MOD0003" style="display: none;" onclick="skipPages('MOD0003')">
 	                    <a href="javascript:void(0)">
 	                        <div class="distance3"></div>
 	                        <div>权限管理</div>
