--- a/src/main/webapp/app/schedule.html
+++ b/src/main/webapp/app/schedule.html
@@ -9,6 +9,7 @@
 <meta name="format-detection" content="telephone=no, email=no" />
 <script type="text/javascript" src='../js/jquery.1.11.3.min.js'></script>
 <script type="text/javascript" src='../app/layer/layer.js'></script>
+<script type="text/javascript" src="../js/properties.js"></script>
 <script type="text/javascript">
 	//根据屏幕大小改变根元素字体大小
 	(function(doc, win) {
