--- a/src/main/webapp/app/boardroom.html
+++ b/src/main/webapp/app/boardroom.html
@@ -8,6 +8,7 @@
     <meta name="format-detection" content="telephone=no, email=no" />
     <meta  http-equiv="x-rim-auto-match" content="none">
     <script type="text/javascript" src='../js/jquery.1.11.3.min.js'></script>
+    <script type="text/javascript" src="../js/properties.js"></script>
     <script type="text/javascript">
         //根据屏幕大小改变根元素字体大小
         (function(doc, win) {
