--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -41,6 +41,12 @@
 	                        <div>权限管理</div>
 	                    </a>
 	                </li>
+					<li id="MOD0004" onclick="skipPages('MOD0004')">
+						<a href="javascript:void(0)">
+							<div class="distance3"></div>
+							<div>我的会议室</div>
+						</a>
+					</li>
 	            </ul>
 	        </div>
 	    </div>
